--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
-.about-info{
+/* .about-info{
   position: relative;
   top: 10rem;
   border-radius: 2rem;
   max-width: 90%;
   word-wrap: break-word;
-  /* width: 80%; */
+ 
   height: 75rem;
   border: 1px solid;
   margin: 0% 5%;
@@ -113,7 +113,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* padding: 0.5rem; */
+
   padding-top: 1rem;
   overflow-y: scroll;
 }
@@ -195,7 +195,7 @@
   outline: none;
   animation-duration: 0.4s;
   transition-property:all ;
-  /* animation-name: none; */
+  
   animation-iteration-count: 1;
 }
 @keyframes clicked {
@@ -205,4 +205,4 @@
   100%{
       background-color: #5ae95a;;
   }
-}
+} */
