--- a/client/src/footer/footer.css
+++ b/client/src/footer/footer.css
@@ -1,33 +1,143 @@
 .foot{
     max-width: 100%;
-    height: 60rem;
+    display: grid;
+    height: 55rem;
     /* background-color: #869b5b; */
-    background: linear-gradient(to right, #f9d423, #ff4e50);
+    background: #ffd86a;
     position: relative;
-    top: 20rem;
+    top: 30rem;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: max-content;
+    /* animation: footer-back-color 10s infinite ease-in-out; */
 }
+
 .brandname{
-    max-width: 40%;
     font-size: 20rem;
     font-family: fantasy;
     position: relative;
-    color: #b46d10;
-    top: 10rem;
+    /* color: #b46d10; */
+    top: 5rem;
     left: 2rem;
+    grid-row: 1 / span3;
+    background: #0000004a;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    height: fit-content;
+    /* animation: brand-color 10s infinite  ease; */
+}
+@keyframes brand-color {
+    0%{
+        background: linear-gradient(to right, #dd528d, #ff8c79, #fbae52);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+    }
+    50%{
+        background:  linear-gradient(to right, #6d440f, #7d4c0c,#bf7419);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+    }
+    100%{
+        background: linear-gradient(to right, #f47595, #b15a9a,#643ba2);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+    }
 }
 .footerdesc{
-    max-width: 50%;
+    
     font-size: 3.5rem;
     position: relative;
-    left: 75rem;
-    top: -12rem;
+    /* left: 5rem; */
+    /* right: 5%; */
+    top: 14rem;
+    color: #232F3E;
+    font-family: monospace;
+    height: fit-content;
 }
 .followus{
-    max-width: 50%;
+    max-width: fit-content;
     font-size: 5rem;
     font-family: monospace;
     position: relative;
-    left: 125rem;
-    top: -32rem;
+    left: 5rem;
+    top: 12rem;
     display: flex;
+    color: #232F3E;
+}
+
+@media screen and (min-width:700px) {
+    @media screen and (max-width:1200px) {
+        html{
+            font-size: 21%;
+        }
+        .foot{
+            height: 65rem;
+        }
+        .brandname{
+            font-size: 7vw;
+            left: 10rem;
+        }
+        .footerdesc{
+            /* max-width: 65%; */
+            font-size: 2vw;
+            top: 15rem;
+            /* left: 75rem;
+            top: -25rem; */
+        }
+        .followus{
+            max-width: fit-content;
+            font-size: 2.2vw;
+            left: 0rem;
+        }
+
+    }
+}
+
+
+@media screen and (min-width:480px) {
+    @media screen and (max-width:700px) {
+        html{
+            font-size: 19.5%;
+        }
+        .foot{
+            height: 65rem;
+        }
+        .brandname{
+            font-size: 9vw;
+            top: 7rem;
+            left: 10rem;
+        }
+        .footerdesc{
+            /* max-width: 65%; */
+            font-size: 2.5vw;
+            top: 15rem;
+            /* left: 75rem;
+            top: -25rem; */
+        }
+        .followus{
+            max-width: fit-content;
+            font-size: 2.5vw;
+            left: 0rem;
+        }
+    }}
+    
+@media screen and (min-width:300px) {
+    @media screen and (max-width:480px) {
+        .foot{
+            display: flex;
+            flex-direction: column;
+            height: 90vw;
+        }
+        .brandname{
+            left: 2.5vw;
+        }
+        .followus{
+           font-size: 5vw;
+           left: 2.5vw;
+        }
+        .footerdesc{
+            font-size: 4vw;
+            padding: 2.5vw;
+            box-sizing: border-box;
+        }
+    }
 }
