--- a/client/src/header/header.css
+++ b/client/src/header/header.css
@@ -1,88 +1,126 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
 
-html{
-    font-size: 41.5%;
+html {
+  font-size: 41.5%;
 }
 
-body{
-    margin:0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
-body::-webkit-scrollbar{
+
+body::-webkit-scrollbar {
   display: none;
 }
 
 
 
 
-.head-back{
-    max-width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: teal;
-    background-image: url('loginpagecover.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+.head-back {
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #ffd86a;
+  background-image: url('coverdoodle.png');
+
+  /* background-size: contain; */
+  /* background-repeat: no-repeat; */
 
 }
 
-.brand-cont{
+.brand-cont {
   width: 60%;
   display: flex;
   height: 100%;
   /* align-items: center; */
   flex-direction: column;
 
-/* background-image: url('loginpagecover.jpg');
+  /* background-image: url('loginpagecover.jpg');
 background-repeat: no-repeat;
 background-size: contain; */
+position: relative;
   justify-content: center;
+
+
+  animation: brandcont 1s  1 ease;
 }
-.brand-name{
-  backdrop-filter: blur(50px);
+
+@keyframes brandcont {
+  from{
+    left: 100%;
+  }
+  to{
+    left: 0;
+  }
+}
+
+.brand-name {
+  height: 80vh;
   position: relative;
   font-family: "Exo 2", sans-serif;
   font-optical-sizing: auto;
   font-weight: 900;
   font-size: 8rem;
   font-style: normal;
-  background: linear-gradient(to right, #000000, #ff0000);
+  /* background: linear-gradient(to right, #000000, #ff0000);
 -webkit-text-fill-color: transparent;
--webkit-background-clip: text;
-  top: 0rem;
+-webkit-background-clip: text; */
+  top: 10vh;
   left: 2rem;
   letter-spacing: 1rem;
-  /* background-color: #00000029; */
-  border-radius: 5rem;
+  color: white;
+  background-color: #232F3E;
+  border-radius: 5rem 0rem 0rem 0rem;
   padding: 2rem;
   box-sizing: border-box;
+  box-shadow: 0vw 0vw 10vw black;
 
 }
 
-.login-form{
-     /* backdrop-filter: unset; */
-     height: 30rem;
-     margin: 0rem auto;
-     top: 10rem;
-     border-radius: 3rem;
-     width: 60rem;
-     display: flex;
-     flex-direction: column;
-     position: relative;
-     justify-content: center;
-     background-color: transparent;
-
+.coverimage {
+  margin: 0 7vw;
+  height: 75%;
 }
-.login-form input{
+.coverimagelogin{
+  display: none;
+}
+
+.login-form {
+  /* backdrop-filter: unset; */
+  /* height: 30rem; */
+  margin: 0rem auto;
+  top: -25rem;
+  border-radius: 3rem;
+  width: 60rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  background-color: #232F3E;
+  padding-top: 30vh;
+  padding-bottom: 5vh;
+  animation: login 1s 1  ease;
+}
+
+@keyframes login {
+  from{
+    top: -100%;
+  }
+  top{
+    top: -25rem;
+  }
+}
+
+.login-form input {
   text-align: center;
   font-family: cursive;
-outline: none;
-  
+  outline: none;
+
   width: 90%;
   background-color: rgb(255, 255, 255);
-   box-shadow: 0rem 0.5rem 1.5rem inset;
+  box-shadow: 0rem 0.5rem 1.5rem inset;
   height: 6rem;
   border-radius: 1rem;
   color: rgb(0, 0, 0);
@@ -91,32 +129,47 @@ outline: none;
   margin-bottom: 2rem;
   border: none;
   padding-left: 1rem;
- 
+
 }
-.login-form #submit{
+
+.login-form #submit {
   width: 45%;
   font-family: cursive;
- cursor: pointer;
+  cursor: pointer;
   font-size: 3rem;
   margin-left: 30%;
   border-radius: 1rem;
-  box-shadow: 0rem 0.5rem 1.5rem 
+  box-shadow: 0rem 0.5rem 1.5rem;
+  color: #232F3E;
+  background-color: #ffd86a;
 }
-.main-head-img{
+
+.signin-cap {
+  font-size: 2vw;
+  position: relative;
+  top: -15rem;
+  text-align: center;
+  color: white;
+  font-family: monospace;
+}
+
+.main-head-img {
   width: 40%;
   height: 100%;
   background-color: white;
   position: relative;
   /* left: 30%; */
- 
+
 }
-.main-head-img img{
+
+.main-head-img img {
   width: 100%;
 
   height: 100%;
 
 }
-.welcomediv{
+
+.welcomediv {
   max-width: 100%;
   position: relative;
   text-align: center;
@@ -125,31 +178,313 @@ outline: none;
   font-size: 4rem;
   font-family: monospace;
 }
-#logout{
+
+#logout {
   background-color: transparent;
   border: none;
   outline: none;
   position: relative;
   top: 4rem;
   cursor: pointer;
-  color: aliceblue;
+  color: #ffd86a;
   font-family: "Exo 2", sans-serif;
   font-optical-sizing: auto;
   font-weight: 900;
   font-size: 3.5rem;
   font-style: normal;
-  background: linear-gradient(to right, #870033, #ff6b08, #730073, #e9d200);
--webkit-text-fill-color: transparent;
--webkit-background-clip: text;
+  /* background: linear-gradient(to right, #870033, #ff6b08, #730073, #e9d200);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text; */
 }
 
-.navbar-ul{
+.navbar-ul {
   backdrop-filter: contrast(0.5);
-    display: flex;
-    align-items: center;
-    background-color: #ffffff33;
-    margin: 0px;
-    padding: 0px;
-    justify-content: space-evenly;
-    padding-left: 2rem;
+  display: flex;
+  align-items: center;
+  background-color: #ffffff33;
+  margin: 0px;
+  padding: 0px;
+  justify-content: space-evenly;
+  padding-left: 2rem;
+}
+
+.head-images {
+  position: relative;
+  width: var(--width);
+  height: calc(var(--quantity)*32vh);
+  backdrop-filter: blur(30px);
+
+}
+
+.head-images .list {
+  /* display: flex;
+    flex-direction: column; */
+  height: calc(var(--quantity)*32vh);
+}
+
+.head-images .list .head-images-items {
+  position: absolute;
+  width: var(--width);
+  height: 32vh;
+  list-style: none;
+  top: 100%;
+  animation: autorun 10s calc((1s) * (var(--position)-1)) infinite linear;
+  /* animation-delay: ; */
+}
+
+.head-images .list .head-images-items img {
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes autorun {
+  from {
+    top: 100%;
+  }
+
+  to {
+    top: 0vh;
+  }
+}
+
+@media screen and (min-width:700px) {
+  @media screen and (max-width:1200px) {
+    html {
+      font-size: 21%;
+    }
+
+    .head-back {
+      background-position-x: -60vw;
+    }
+
+    .head-back {
+      flex-direction: column-reverse;
+      justify-content: initial;
+    }
+
+    .brand-cont {
+      width: 85%;
+      height: 40vh;
+      position: absolute;
+      top: 10vh;
+      left: 14vw;
+      animation: brandcont 1.5s 1 ease;
+    }
+    @keyframes brandcont {
+      from{left: 100%;}
+      to{left: 10vw;}
+     }
+
+    .brand-name {
+      font-size: 5.5vw;
+      top: 0rem;
+      height: 40vh;
+    }
+
+    .login-form {
+      top: -15rem;
+      width: 80%;
+      height: 20%;
+      padding-top: 10vh;
+      padding-bottom: 10vh;
+      animation: login 1.5s 1 ease;
+    }
+    @keyframes login {
+      from{top: 70%;}
+      to{top: -15rem;}
+    }
+
+    .login-form input {
+      margin: 0 5%;
+      width: 90%;
+      font-size: 3.5vw;
+      height: 8vw;
+      margin-bottom: 3vw;
+
+    }
+
+    .login-form #submit {
+      font-size: 3.5vw;
+      margin: 0 auto;
+      width: 60%;
+    }
+
+    .signin-cap {
+      font-size: 4vw;
+      z-index: 2;
+     backdrop-filter: blur(2px);
+    }
+.coverimage{display: none;}
+    .coverimagelogin {
+      display: block;
+      margin: 0vh;
+      height: 75%;
+      position: absolute;
+      top: -25vh;
+      width: 100%;
+      z-index: 1;
+    }
+  }
+}
+
+@media screen and (min-width:480px) {
+  @media screen and (max-width:700px) {
+    html {
+      font-size: 19.5%;
+    }
+
+    .head-back {
+      background-position-x: -60vw;
+    }
+
+    .head-back {
+      flex-direction: column-reverse;
+      justify-content: initial;
+    }
+
+    .brand-cont {
+      width: 85%;
+      height: 40vh;
+      position: absolute;
+      top: 10vh;
+      left: 14vw;
+      animation: brandcont 1.5s 1 ease;
+    }
+    @keyframes brandcont {
+      from{left: 100%;}
+      to{left: 10vw;}
+     }
+
+    .brand-name {
+      font-size: 5.5vw;
+      top: 0rem;
+      height: 40vh;
+    }
+
+    .login-form {
+      top: -15rem;
+      width: 80%;
+      height: 20%;
+      padding-top: 10vh;
+      padding-bottom: 10vh;
+      animation: login 1.5s 1 ease;
+    }
+    @keyframes login {
+      from{top: 70%;}
+      to{top: -15rem;}
+    }
+
+    .login-form input {
+      margin: 0 5%;
+      width: 90%;
+      font-size: 3.5vw;
+      height: 8vw;
+      margin-bottom: 3vw;
+
+    }
+
+    .login-form #submit {
+      font-size: 3.5vw;
+      margin: 0 auto;
+      width: 60%;
+    }
+
+    .signin-cap {
+      font-size: 4vw;
+      z-index: 2;
+     backdrop-filter: blur(2px);
+    }
+.coverimage{display: none;}
+    .coverimagelogin {
+      display: block;
+      margin: 0vh;
+      height: 75%;
+      position: absolute;
+      top: -25vh;
+      width: 100%;
+      z-index: 1;
+    }
+  }}
+
+
+@media screen and (min-width:300px) {
+  @media screen and (max-width:480px) {
+
+
+
+    .head-back {
+      background-position-x: -60vw;
+    }
+
+    .head-back {
+      flex-direction: column-reverse;
+      justify-content: initial;
+    }
+
+    .brand-cont {
+      width: 88%;
+      height: 40vh;
+      position: absolute;
+      top: 10vh;
+      left: 10vw;
+      animation: brandcont 1.5s 1 ease;
+    }
+ @keyframes brandcont {
+  from{left: 100%;}
+  to{left: 10vw;}
+ }
+    .brand-name {
+      font-size: 8vw;
+      top: 0rem;
+      height: 40vh;
+    }
+
+    .login-form {
+      top: -15rem;
+      width: 95%;
+      height: 20%;
+      padding-top: 10vh;
+      padding-bottom: 10vh;
+      animation: login 1.5s 1 ease;
+    }
+    @keyframes login {
+      from{top: 70%;}
+      to{top: -15rem;}
+    }
+
+    .login-form input {
+      margin: 0 5%;
+      width: 90%;
+      font-size: 4vw;
+      height: 8vw;
+      margin-bottom: 3vw;
+
+    }
+
+    .login-form #submit {
+      font-size: 4vw;
+      margin: 0 auto;
+      width: 60%;
+    }
+
+    .signin-cap {
+      /* display: none; */
+      font-size: 5vw;
+      z-index: 2;
+      backdrop-filter: blur(2px);
+    }
+    #logout{
+      font-size: 5vw;
+    }
+.coverimage{display: none;}
+    .coverimagelogin {
+      display: block;
+      margin: 0vh;
+      height: 75%;
+      position: absolute;
+      top: -20vh;
+      width: 100%;
+      z-index: 1;
+    }
+  }
 }
